# Deep_search_agent

./: .env  .env.example  .env.example_db  .gitignore  Docker_commands.md  README.md  compose.yaml  hello.py  pyproject.toml  railway.json
backend/: DockerFile
backend/src/: fix_db_schema.py  main.py
backend/src/api/: db.py
backend/src/api/ai/: agents.py  assistant.py  llms.py  schemas.py  services.py  tools.py
backend/src/api/chat/: models.py  routing.py
backend/src/api/myemailer/: inbox_reader.py  sender.py
db/base/1/: 2619  2696  2840  2841  pg_internal.init
db/base/5/: 1247  1249  1259  16387  16388  16393  16394  16396  16397  16402  16403  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db/global/: 1260  pg_control  pg_internal.init
db/pg_stat/: pgstat.stat
notebooks/: 01_test.ipynb
static_html/: static.DockerFile
