[project]
name = "arabic-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "psycopg[binary]>=3.3.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
